fix woird wrap pls

--- a/css/navbar.css
+++ b/css/navbar.css
@@ -91,6 +91,7 @@ label ul {
   position: absolute;
   top: 50%;
   left: 50%;
+  width: 90%;
   -webkit-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%);
   opacity: 0;
